--- a/package.json
+++ b/package.json
@@ -10,9 +10,21 @@
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.2.3",
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "redux-thunk": "^2.4.1",
+    "sass": "^1.49.9",
+    "sweetalert2": "^11.4.8",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
