--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "luxon": "^2.3.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
@@ -54,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/luxon": "^2.3.1"
   }
 }
