--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.3",
+    "@mui/x-data-grid": "^5.8.0",
     "@syncfusion/ej2-base": "^19.4.52",
     "@syncfusion/ej2-react-base": "^19.4.56",
     "@syncfusion/ej2-react-grids": "^19.4.56",
