--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "gh-pages": "^3.2.3",
     "luxon": "^2.3.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
@@ -41,7 +42,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
   },
   "eslintConfig": {
     "extends": [
