--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "agenda",
   "version": "0.1.0",
+  "homepage": "https://alexistorres9906.github.io/",
   "private": true,
   "dependencies": {
     "@syncfusion/ej2-base": "^19.4.52",
@@ -36,7 +37,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -57,6 +60,7 @@
     ]
   },
   "devDependencies": {
-    "@types/luxon": "^2.3.1"
+    "@types/luxon": "^2.3.1",
+    "gh-pages": "^3.2.3"
   }
 }
