--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "homepage": "https://alexistorres9906.github.io/",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.3",
+    "@mui/x-data-grid": "^5.8.0",
     "@syncfusion/ej2-base": "^19.4.52",
     "@syncfusion/ej2-react-base": "^19.4.56",
     "@syncfusion/ej2-react-grids": "^19.4.56",
@@ -17,6 +21,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "gh-pages": "^3.2.3",
     "luxon": "^2.3.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
@@ -24,6 +29,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.2.3",
     "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
