--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "agenda",
   "version": "0.1.0",
-  "homepage": "https://alexistorres9906.github.io/",
+  "homepage": "https://alexistorres9906.github.io/agenda",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.8.2",
