--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "sass": "^1.49.9",
     "sweetalert2": "^11.4.8",
     "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
