--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
     "luxon": "^2.3.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.2.3",
@@ -70,6 +72,7 @@
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "@types/luxon": "^2.3.1",
+    "@types/react-datepicker": "^4.4.1",
     "gh-pages": "^3.2.3"
   }
 }
