--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@mui/material": "^5.5.3",
     "@mui/x-data-grid": "^5.8.0",
     "@syncfusion/ej2-base": "^19.4.52",
+    "@syncfusion/ej2-locale": "^19.4.41",
     "@syncfusion/ej2-react-base": "^19.4.56",
     "@syncfusion/ej2-react-grids": "^19.4.56",
+    "@syncfusion/ej2-react-treegrid": "^19.4.56",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -35,6 +37,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.9",
     "sweetalert2": "^11.4.8",
@@ -73,6 +76,7 @@
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "@types/luxon": "^2.3.1",
     "@types/react-datepicker": "^4.4.1",
+    "@types/redux-persist": "^4.3.1",
     "gh-pages": "^3.2.3"
   }
 }
