--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@syncfusion/ej2-base": "^19.4.52",
     "@syncfusion/ej2-locale": "^19.4.41",
     "@syncfusion/ej2-react-base": "^19.4.56",
+    "@syncfusion/ej2-react-calendars": "^19.4.56",
+    "@syncfusion/ej2-react-dropdowns": "^19.4.56",
     "@syncfusion/ej2-react-grids": "^19.4.56",
+    "@syncfusion/ej2-react-schedule": "^19.4.55",
     "@syncfusion/ej2-react-treegrid": "^19.4.56",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
