--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "postbuild": "purgecss --css build/static/css/*.css --content build/index.html build/static/js/*.js --output build/static/css"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
